; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_net.c_mac_mbuf_label_associate_bpfdesc.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_net.c_mac_mbuf_label_associate_bpfdesc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bpf_d = type { i32 }
%struct.mbuf = type { i32 }
%struct.label = type { i32 }

@mbuf_label_associate_bpfdesc = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mac_mbuf_label_associate_bpfdesc(%struct.bpf_d* %0, %struct.mbuf* %1) #0 {
  %3 = alloca %struct.bpf_d*, align 8
  %4 = alloca %struct.mbuf*, align 8
  %5 = alloca %struct.label*, align 8
  %6 = alloca %struct.label*, align 8
  store %struct.bpf_d* %0, %struct.bpf_d** %3, align 8
  store %struct.mbuf* %1, %struct.mbuf** %4, align 8
  %7 = load %struct.mbuf*, %struct.mbuf** %4, align 8
  %8 = call %struct.label* @mac_mbuf_to_label(%struct.mbuf* %7)
  store %struct.label* %8, %struct.label** %5, align 8
  %9 = load %struct.bpf_d*, %struct.bpf_d** %3, align 8
  %10 = call %struct.label* @mac_bpfdesc_label_get(%struct.bpf_d* %9)
  store %struct.label* %10, %struct.label** %6, align 8
  %11 = load i32, i32* @mbuf_label_associate_bpfdesc, align 4
  %12 = load %struct.bpf_d*, %struct.bpf_d** %3, align 8
  %13 = load %struct.label*, %struct.label** %6, align 8
  %14 = load %struct.mbuf*, %struct.mbuf** %4, align 8
  %15 = load %struct.label*, %struct.label** %5, align 8
  %16 = call i32 @MAC_PERFORM(i32 %11, %struct.bpf_d* %12, %struct.label* %13, %struct.mbuf* %14, %struct.label* %15)
  ret void
}

declare dso_local %struct.label* @mac_mbuf_to_label(%struct.mbuf*) #1

declare dso_local %struct.label* @mac_bpfdesc_label_get(%struct.bpf_d*) #1

declare dso_local i32 @MAC_PERFORM(i32, %struct.bpf_d*, %struct.label*, %struct.mbuf*, %struct.label*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
